k3s_cluster/base/default/template/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset
  namespace: <app-ns>
spec:
  selector:
    matchLabels:
      app: <app-ns>-<app-name>
  template:
    metadata:
      labels:
        app: <app-ns>-<app-name>
    spec:
      serviceAccountName: serviceaccount
      containers:
        - name: <app-name>
          image: <app-URL>:latest
          volumeMounts:
            - name: varlog
              mountPath: /var/log
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
