k3s_cluster/base/default/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: <app-ns>
  labels:
    app: <app-ns>-<app-name>
spec:
  type: LoadBalancer
  selector:
    app: <app-ns>-<app-name>
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 6680
      
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: 6643
