k3s_cluster/base/default/template/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: <app-ns>
  labels:
    app: <app-ns>-<app-name>
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`<app-name>.<app-ns>.home`)
      middlewares:
        - name: <app-ns>-middleware-auth-authentik
      services:
        - name: <app-ns>-<app-name>-service
          port: 6680
  #tls: {}
